# hedges

./: .gitignore  .gitmodules  CMakeLists.txt  DNAcode.cpp  DNAcode.h  DNAcode_demo.cpp  LICENSE  Makefile  README.md  RSecc.cpp  RSecc.h  build_linux_bash.sh  build_windows_command_line.bat  heapscheduler.h  nr3b.h  ran.h  reed_solomon_schifra.h  requirements.txt  testprograms.h  typical_output_linux.txt  typical_output_windows.txt
Build_Linux/: DNAcode_demo  WizardOfOzInEsperanto.txt
Windows_VisualStudio_IDE/: HEDGES.sln  HEDGES.vcxproj  HEDGES.vcxproj.filters
schifra/: AA_README_LICENSE.txt  schifra_bitio_example01.cpp  schifra_bitio_example02.cpp  schifra_crc.hpp  schifra_ecc_traits.hpp  schifra_erasure_channel.hpp  schifra_erasure_channel_example01.cpp  schifra_erasure_channel_example02.cpp  schifra_error_processes.hpp  schifra_file_interleaving_example01.cpp  schifra_file_interleaving_example02.cpp  schifra_file_interleaving_example03.cpp  schifra_fileio.hpp  schifra_galois_field.hpp  schifra_galois_field_element.hpp  schifra_galois_field_polynomial.hpp  schifra_galois_utilities.hpp  schifra_interleaving_example01.cpp  schifra_interleaving_example02.cpp  schifra_interleaving_example03.cpp  schifra_license.txt  schifra_reed_solomon_bitio.hpp  schifra_reed_solomon_block.hpp  schifra_reed_solomon_codec_validation.cpp  schifra_reed_solomon_codec_validator.hpp  schifra_reed_solomon_decoder.hpp  (+27 more)
src/: CMakeLists.txt  NRpyDNAcode.cpp  NRpyRS.cpp  compile_all.sh  heapscheduler.h  nr3python.h  ran.h  reed_solomon_schifra.h
src/schifra/: AA_README_LICENSE.txt
(+12 files in other folders)
